--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "material-tailwind-kit-react",
+  "name": "my-project",
   "private": true,
   "version": "2.1.0",
   "type": "module",
